Refactor to per-topic tables with PostgreSQL range partitioning
- Replace global postka_records table with per-topic partitioned tables
- Each topic gets its own table (e.g., postka_records_my_topic_1) with
  PostgreSQL range partitioning on partition_id
- Remove redundant postka_partitions table; derive from partition_count
- Add new PostgreSQL functions for dynamic table/partition management
- Add trigger to handle partition_count increases
- Update producer and consumer to use dynamic table names
- Add tests for multiple topics and multiple partitions

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>